--- a/Public/assets/style/authentication.css
+++ b/Public/assets/style/authentication.css
@@ -112,3 +112,28 @@
 .errors { 
     margin:0; 
     padding-left:18px; }
+
+/* Styles pour les select (après la ligne 45) */
+.field select {
+    width: 100%;
+    height: 48px;
+    padding: 12px 16px;
+    border-radius: 12px;
+    border: 1px solid var(--line);
+    background: #fff;
+    font-size: 14px;
+    outline: none;
+    color: #a8b0ba ;  /* ✅ Force le gris */
+    cursor: pointer;
+}
+
+/* Pour rendre les options du menu deroulant noires  */
+.field select:has(option:checked:not([value=""])),
+.field select:not(:invalid) {
+    color: #000;
+}
+
+.field select:focus {
+    border-color: var(--brand);
+    box-shadow: 0 0 0 4px var(--focus);
+}
